{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 78,
  "lineage": "7904ee8d-8370-6a78-9ee4-74599c98659d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ad2567c9e3d7893",
            "arn": "arn:aws:ec2:us-east-1:983186749214:instance/i-00be71a60a45a0b36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00be71a60a45a0b36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-checkpoint",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0197dd8907f58261c",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_ip": "10.0.1.25",
            "public_ip": "34.238.148.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014f93438f6bc84f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04606b5fb76ecc4f3",
            "tags": {
              "Name": "ec2-tf"
            },
            "tags_all": {
              "Name": "ec2-tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad29ca6e3e5c10e6"
            ]
          },
          "dependencies": [
            "aws_security_group.SG",
            "aws_subnet.subnet0",
            "aws_vpc.vpc0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983186749214:internet-gateway/igw-02cd4a4d841995f5f",
            "id": "igw-02cd4a4d841995f5f",
            "owner_id": "983186749214",
            "tags": {
              "Name": "gw-tf"
            },
            "tags_all": {
              "Name": "gw-tf"
            },
            "vpc_id": "vpc-0c2ab59c805b1644a"
          },
          "dependencies": [
            "aws_vpc.vpc0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983186749214:route-table/rtb-086de2132c57c71be",
            "id": "rtb-086de2132c57c71be",
            "owner_id": "983186749214",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cd4a4d841995f5f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-tf"
            },
            "tags_all": {
              "Name": "rt-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ab59c805b1644a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b08eef462e08140",
            "route_table_id": "rtb-086de2132c57c71be",
            "subnet_id": "subnet-04606b5fb76ecc4f3"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.subnet0",
            "aws_vpc.vpc0",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983186749214:security-group/sg-0ad29ca6e3e5c10e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad29ca6e3e5c10e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211115221058976700000001",
            "name_prefix": "terraform-",
            "owner_id": "983186749214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-tf"
            },
            "tags_all": {
              "Name": "sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ab59c805b1644a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983186749214:subnet/subnet-04606b5fb76ecc4f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04606b5fb76ecc4f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983186749214",
            "tags": {
              "Name": "sn-tf"
            },
            "tags_all": {
              "Name": "sn-tf"
            },
            "vpc_id": "vpc-0c2ab59c805b1644a"
          },
          "dependencies": [
            "aws_vpc.vpc0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:983186749214:vpc/vpc-0c2ab59c805b1644a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0cc41e9111e1242",
            "default_route_table_id": "rtb-0a0c9479015b09315",
            "default_security_group_id": "sg-0e27898e8942a113a",
            "dhcp_options_id": "dopt-0b84f1126c48bf284",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c2ab59c805b1644a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0c9479015b09315",
            "owner_id": "983186749214",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}